# fetish2

./: .gitignore  Cargo.toml  README.md
fetish-bot/: Cargo.toml
fetish-bot/src/: args.rs  main.rs
fetish-common/: Cargo.toml
fetish-common/src/: application.rs  database.rs  database_resolve.rs  error.rs  lib.rs  location.rs  scout.rs  update_dispatcher.rs  utils.rs
fetish-common/src/models/: basic_group_wrapper.rs  chat_wrapper.rs  message_wrapper.rs  mod.rs  scammer.rs  scouted_chat.rs  supergroup_wrapper.rs  user_wrapper.rs
fetish-common/src/state/: closing_state.rs  login_state.rs  message_state.rs  mod.rs
fetish-common/src/states/: exploitation_state.rs  login_state.rs  message_state.rs  mod.rs
fetish-mojo2/: Cargo.toml
fetish-mojo2/src/: main.rs
res/: keywords.json  message.txt  scam_account.txt
src/: main.rs
src/app/: application.rs  closing_state.rs  login_state.rs  message_state.rs  mod.rs
