[package]
name = "fetish2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
dialoguer = "0.11.0"
env_logger = "0.11"
futures = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
tdlib = "0.10.0"
tokio = { version = "1.36", features = ["full"] }
