[workspace]
members = [
    "fetish-*",
]
resolver =  "2"

[workspace.dependencies]
async-trait = { version = "0.1.77", default-features = false }
chrono = { version = "0.4.34", default-features = false, features = ["now"] }
clap = { version = "4.5.1", default-features = false, features = ["std", "derive"] }
crossterm = { version = "0.27.0", default-features = false, features = ["events"] }
dialoguer = { version = "0.11.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
fetish-common = { path = "fetish-common" }
futures = { version = "0.3.30", default-features = false }
log = { version = "0.4.20", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
ratatui = { version = "0.26.1", default-features = false, features = ["crossterm"] }
regex = { version = "1.10.3", default-features = false, features = ["unicode-perl"] }
rusqlite = { version = "0.31.0", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false }
tdlib = { version = "0.10.0", default-features = false }
tokio = { version = "1.36", default-features = false, features = ["full"] }
unidecode = { version = "0.3.0", default-features = false }

# TUI
# Configurable states (join chat strategy, who and where to reply...)
