[package]
name = "fetish2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true, features = [] }
fetish-common = { workspace = true, features = [] }
log = { workspace = true, features = [] }
tokio = { workspace = true, features = [] }
