[package]
name = "fetish-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true, features = [] }
dialoguer = { workspace = true, features = [] }
futures = { workspace = true, features = [] }
log = { workspace = true, features = [] }
rand = { workspace = true, features = [] }
tdlib = { workspace = true, features = [] }
tokio = { workspace = true, features = [] }
