[package]
name = "mojo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { workspace = true, features = [] }
ratatui = { workspace = true, features = [] }
rusqlite = { workspace = true, features = [] }
